--- a/archivos/templates/base.html
+++ b/archivos/templates/base.html
@@ -52,7 +52,8 @@
         display: flex;
         justify-content: center; /* Centrar horizontalmente */
         align-items: center; /* Centrar verticalmente */
-        background-color: #1f1f1f00;
+        background-color: transparent; /* Quitar color de fondo */
+        border: none;            /* Sin bordes */
         height: 100px;
         gap: 53%;
 
