--- a/archivos/templates/terminos.html
+++ b/archivos/templates/terminos.html
@@ -3,11 +3,7 @@
 {% block content %}
 
 <style>
-  body {
-    display: flex !important;
-    flex-direction: column !important; /* Asegúrate de que esté configurado correctamente */
-    min-height: 130vh !important; /* Asegura que el body ocupe al menos toda la altura de la ventana */
-}
+
 .terms {
   margin: auto;
   max-width: 700px;
@@ -17,7 +13,6 @@
   justify-content: center;
   align-items: center;
   text-align: justify;
-  margin-top: 120px;
 
 
 }
@@ -25,16 +20,23 @@
   .terms {
     max-width: 550px;
 
-    margin-left: 30PX;
-    margin-right: 30PX;
-    margin-top: 200px;
+    margin: auto;
+    margin-top: 100px;
 
+  }
+  body {
+    display: flex !important;
+    flex-direction: column !important; /* Asegúrate de que esté configurado correctamente */
+    min-height: 130vh !important; /* Asegura que el body ocupe al menos toda la altura de la ventana */
   }
 }
 @media (max-width: 550px) {
   .terms {
     max-width: 400px;
     max-height: 300PX;
+    margin-top: 200px;
+    margin-left: 30px;
+    margin-right: 30px;
 
   }
 }
@@ -42,6 +44,7 @@
   .terms {
     max-width: 300px;
     max-height: 300PX;
+    margin-top: 120px;
 
   }
 }
